--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ dnspython==2.6.1
 email_validator==2.1.1
 exceptiongroup==1.2.0
 Flask==3.0.2
+Flask-Admin==1.6.1
 Flask-Bcrypt==1.0.1
 Flask-HTTPAuth==4.8.0
 Flask-JWT-Extended==4.6.0
